(ocamllex
  (modules lexer))

;(menhir
;  (modules parser)
;  (flags -la 2)
;)

(executable
  (name lexer)
  (flags (:standard (-warn-error -32))))

;(rule
;  (with-stdout-to calc.out
;  (with-stdin-from calc.in
;    (run ./calc.exe)
;  ))
;)
;
;(rule
;  (alias test)
;  (action (diff calc.exp calc.out))
;)
