(ocamllex
  (modules lexer))

(menhir
  (modules parser)
  (flags -la 2))

(executable
  (name main)
  (modules lexer ast parser asm main)
  (flags (:standard (-warn-error -32))))

; (executable
;   (name parserdemo)
;   (modules lexer ast parser parserdemo)
;   (flags (:standard (-warn-error -32))))

; (executable
;   (name lexerdemo)
;   (modules token lexer lexerdemo)
;   (flags (:standard (-warn-error -32))))



;; https://dune.readthedocs.io/en/latest/reference/actions/index.html
;(rule
; (alias hi)
; (target main.ml)
; (deps
;   lexer.mll
;   lexer.ml
;   token.ml)
; (action
;   (chdir %{workspace_root}
;     (run ocamllex -o %{target} %{deps}))))

;
;(rule
;  (with-stdout-to calc.out
;  (with-stdin-from calc.in
;    (run ./calc.exe)
;  ))
;)
;
;(rule
;  (alias test)
;  (action (diff calc.exp calc.out))
;)
